<?xml version="1.0" encoding="utf-8"?>
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editor_mode">

    <Button
        android:id="@+id/crag_detail_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|bottom"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:background="#3F51B5"
        android:padding="10dp"
        android:paddingRight="10dp"
        android:text="@string/crag_details"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/add_crag_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:background="#3F51B5"
        android:padding="10dp"
        android:paddingRight="10dp"
        android:text="@string/add_crag"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/confirm_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:background="#3F51B5"
        android:padding="10dp"
        android:paddingRight="10dp"
        android:text="@string/confirm_position"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/settings_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|top"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="#3F51B5"
        android:padding="10dp"
        android:paddingRight="10dp"
        android:text="@string/settings"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/coordinates_viewer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coordinates_viewer"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:gravity="top|center"/>
</fragment>