<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_sector">

    <TextView
        android:id="@+id/new_sector_title5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/Title_new_sector"
        android:textColor="#009688"
        android:textSize="48sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/new_sector_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/new_routes_table"
        android:layout_width="350dp"
        android:layout_height="180dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_route_lenght">

    </TableLayout>

    <EditText
        android:id="@+id/new_route_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/hint_route_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_sector_name" />

    <EditText
        android:id="@+id/new_route_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_route_grade"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/new_route_name"
        app:layout_constraintStart_toStartOf="@+id/new_route_name"
        app:layout_constraintTop_toBottomOf="@+id/new_route_name" />

    <EditText
        android:id="@+id/new_route_lenght"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_route_lenght"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/new_route_grade"
        app:layout_constraintStart_toStartOf="@+id/new_route_grade"
        app:layout_constraintTop_toBottomOf="@+id/new_route_grade" />


    <Button
        android:id="@+id/add_route_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:text="@string/add_route"
        app:backgroundTint="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_route_lenght" />

    <Button
        android:id="@+id/create_sector_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="28dp"
        android:text="@string/create_sector"
        app:backgroundTint="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_route_btn" />

    <Button
        android:id="@+id/return_to_crag_detail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="232dp"
        android:text="@string/returnToCrag_detail"
        app:backgroundTint="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_route_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>